--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "guoyongwei",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.1.1",
     "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.2",
     "eslint": "^4.18.1",
     "express": "^4.16.2",
+    "imagemin": "^5.3.1",
+    "imagemin-pngquant": "^5.0.1",
     "jquery": "^3.3.1",
     "psd": "^3.2.0",
     "rimraf": "^2.6.2"
